--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -35,6 +35,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentshader.fsh" />
+    <None Include="fragmentshader.frag" />
+    <None Include="vertexshader.vert" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="vertexshader.vsh" />
