--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -131,19 +131,15 @@
     <ClCompile Include="glsl.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objloader.cpp" />
+    <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glsl.h" />
     <ClInclude Include="objloader.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="vertexshader.vsh">
-      <FileType>Document</FileType>
-    </Text>
+    <ClInclude Include="texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentshader.frag" />
-    <None Include="fragmentshader.fsh" />
     <None Include="vertexshader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
